--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,39 +18,35 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.VM_NAME }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deploy Application
         run: |
-          ssh -tt -i ~/.ssh/id_rsa student@${{ secrets.VM_NAME }} << 'EOSSH'
-            # 配置免密码 sudo (需提前在服务器配置)
-            # echo 'student ALL=(ALL) NOPASSWD: ALL' | sudo tee /etc/sudoers.d/student
+          ssh -tt -i ~/.ssh/id_rsa student@${{ secrets.VM_HOST }} << 'EOSSH'
+            # 非交互式系统更新
+            sudo DEBIAN_FRONTEND=noninteractive apt update -y
+            sudo DEBIAN_FRONTEND=noninteractive apt upgrade -y
 
-            # 更新系统
-            sudo apt update && sudo apt upgrade -y
-
-            # 配置 Git 凭据（如果使用 HTTPS）
-            # git config --global credential.helper 'store --file ~/.git-credentials'
-            # echo "https://${{ secrets.GH_USER }}:${{ secrets.GH_TOKEN }}@github.com" > ~/.git-credentials
-
-            # 克隆或更新项目
+            # 克隆/更新仓库（使用 Token 认证）
             if [ ! -d "website" ]; then
-              git clone https://${{ secrets.GH_USER }}:${{ secrets.GH_TOKEN }}@github.com/yangyniii/COMP3030J-Software-Engineering-Project-2.git website
+              git clone "https://${{ secrets.GH_USER }}:${{ secrets.GH_TOKEN }}@github.com/yangyniii/COMP3030J-Software-Engineering-Project-2.git" website
             else
               cd website
               git pull origin main
               cd ..
             fi
 
-            # 创建并激活虚拟环境
-            cd website || exit 1
+            # 严格检查目录
+            cd website || { echo "❌ 网站目录缺失"; exit 1; }
+
+            # 创建 Python 虚拟环境
             python3 -m venv venv
             source venv/bin/activate
 
             # 安装依赖
             pip install -r requirements.txt
 
-            # 安装和配置 Gunicorn
+            # 配置 Gunicorn
             pip install gunicorn
             cat << 'EOCONFIG' > gunicorn.conf.py
             import multiprocessing
@@ -58,10 +54,10 @@ jobs:
             workers = multiprocessing.cpu_count() * 2 + 1
             EOCONFIG
 
-            # 创建 Gunicorn 服务
+            # 创建 Systemd 服务
             sudo tee /etc/systemd/system/gunicorn.service > /dev/null << 'EOSERVICE'
             [Unit]
-            Description=gunicorn daemon for Flask app
+            Description=Gunicorn for Flask App
             Requires=gunicorn.socket
             After=network.target
 
@@ -81,18 +77,19 @@ jobs:
             WantedBy=multi-user.target
             EOSERVICE
 
+            # 激活服务
             sudo systemctl daemon-reload
             sudo systemctl enable --now gunicorn
 
             # 配置 Nginx
-            sudo tee /etc/nginx/sites-available/${{ secrets.VM_NAME }} > /dev/null << 'EONGINX'
+            sudo tee /etc/nginx/sites-available/${{ secrets.VM_HOST }} > /dev/null << 'EONGINX'
             upstream app_server {
                 server unix:/run/gunicorn.sock;
             }
 
             server {
                 listen 80;
-                server_name ${{ secrets.VM_NAME }};
+                server_name ${{ secrets.VM_HOST }};
 
                 location / {
                     proxy_pass http://app_server;
@@ -102,6 +99,7 @@ jobs:
             }
             EONGINX
 
-            sudo ln -sf /etc/nginx/sites-available/${{ secrets.VM_NAME }} /etc/nginx/sites-enabled/
+            # 重启 Nginx
+            sudo ln -sf /etc/nginx/sites-available/${{ secrets.VM_HOST }} /etc/nginx/sites-enabled/
             sudo nginx -t && sudo systemctl restart nginx
           EOSSH
