--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,16 +13,19 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: SSH into Remote Server and Deploy
+    - name: Setup SSH and Deploy
       env:
-        GIT_PAT: ${{ secrets.MY_GITHUB_PAT }}
+        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
       run: |
-        echo "Starting deployment..."
+        echo "Setting up SSH key..."
+        mkdir -p ~/.ssh
+        echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_ed25519
+        chmod 600 ~/.ssh/id_ed25519
         ssh -o StrictHostKeyChecking=no student@csi420-02-vm5.ucd.ie << 'EOF'
           echo "Connected to server."
           cd ~/COMP3030J-Software-Engineering-Project-2
           echo "Pulling latest code from main branch..."
-          git pull https://yangyniii:${{ secrets.MY_GITHUB_PAT }}@github.com/yangyniii/COMP3030J-Software-Engineering-Project-2.git main
+          git pull origin main
           echo "Activating virtual environment..."
           source ~/venv/bin/activate
           echo "Installing dependencies..."
