--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,8 @@ jobs:
     - name: Setup SSH and Deploy
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        GITHUB_USERNAME: yangyniii
+        GITHUB_PAT: ${{ secrets.MY_GITHUB_PAT }}
       run: |
         echo "Setting up SSH key..."
         mkdir -p ~/.ssh
@@ -24,8 +26,8 @@ jobs:
         ssh -o StrictHostKeyChecking=no student@csi420-02-vm5.ucd.ie << 'EOF'
           echo "Connected to server."
           cd ~/COMP3030J-Software-Engineering-Project-2
-          echo "Pulling latest code from main branch..."
-          git pull origin main
+          echo "Pulling latest code from main branch with authentication..."
+          git pull https://\$GITHUB_USERNAME:\$GITHUB_PAT@github.com/\$GITHUB_USERNAME/COMP3030J-Software-Engineering-Project-2.git main
           echo "Activating virtual environment..."
           source ~/venv/bin/activate
           echo "Installing dependencies..."
@@ -35,3 +37,4 @@ jobs:
           sudo systemctl restart gunicorn
           echo "Deployment complete."
         EOF
+
