--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,15 @@
 bcrypt==4.3.0
+beautifulsoup4==4.13.3
 blinker==1.9.0
+cffi==1.17.1
 click==8.1.8
+cryptography==44.0.2
 Flask==3.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+pycparser==2.22
 PyMySQL==1.1.1
+soupsieve==2.6
+typing_extensions==4.13.1
 Werkzeug==3.1.3
