--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,43 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
 bcrypt==4.3.0
 beautifulsoup4==4.13.3
 blinker==1.9.0
+certifi==2025.4.26
 cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.2
+distro==1.9.0
 Flask==3.1.0
+Flask-SQLAlchemy==3.1.1
+frozenlist==1.6.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jiter==0.9.0
 MarkupSafe==3.0.2
+multidict==6.4.3
+openai==0.28.0
+propcache==0.3.1
 pycparser==2.22
+pydantic==2.11.4
+pydantic_core==2.33.2
 PyMySQL==1.1.1
+requests==2.32.3
+sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.40
+tqdm==4.67.1
+typing-inspection==0.4.0
 typing_extensions==4.13.1
+urllib3==2.4.0
 Werkzeug==3.1.3
+yarl==1.20.0
